{{$NEXT}}

0.0.26  2021-09-27T07:56:45+13:00
    - Export script css-rewriter.raku to CSS::Stylesheet module.

0.0.25  2021-09-26T12:20:38+13:00
    - Add :include{ :links, :import } to activate and follow
      '<link rel=stylesheet .../>' links and '@import' rules.

0.0.24  2021-09-21T06:49:03+12:00
    - Update to LibXML 0.6.9 for URI() method fix
    - Restrict style() method to elements and paths

0.0.23  2021-09-19T08:07:28+12:00
    - Add :import option. Enables stylesheet '@import' rules

0.0.22  2021-09-08T12:44:20+12:00
    - Use font-resources() method from latest CSS::Stylesheet. This enables
      `@font-face` driven loading of font resources.

0.0.21  2021-08-06T15:45:30+12:00
    - Implement @font-face rules. Fonts properties can be
      accessed by font-face(), which returns a list, or
      font-face($family), to select by family name.

0.0.20  2021-05-22T06:34:41+12:00
    - Factor out CSS::Tagset as a separate module

0.0.19  2021-05-18T17:14:40+12:00
    - Add support for @page at-rules (from CSS::Stylesheet v0.0.18+)

0.0.18  2021-05-13T12:09:20+12:00
    - Documentation release

0.0.17  2021-05-06T17:27:59+12:00
    - Factor out CSS::Stylesheet as a separate module.
      CSS::Media has also been moved to CSS::Stylesheet

0.0.16  2021-05-05T10:17:41+12:00
    - Refactor of CSS::TagSet::Pango custom properties build
    - Fix :inherit option to work without a tag-set
    - Optimize away rule-sets with empty property lists

0.0.15  2021-04-26T14:42:19+12:00
    - Fix Str(:optimize) option

0.0.14  2021-04-26T10:35:05+12:00
    - Fix @media serialization

0.0.13  2021-04-25T09:44:47+12:00
    - Add stylesheet ast() method #5

0.0.12  2021-04-23T12:42:50+12:00
    - Tweak/document css-inliner.raku script
    - Rename script css-rewriter.raku -> css-tidy.raku
    - More Tagged PDF development
    - Fix serialization of default values in rule-sets #4

0.0.11  2021-04-07T11:46:08+12:00
    - Adjust tests for CSS::Properties v0.6.5+
